<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="10dp"

    android:background="@color/white"
    tools:ignore="MissingClass">
    <TextView
        android:id="@+id/txtTitleYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_year"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.jaygoo.widget.RangeSeekBar
        android:id="@+id/rsYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rsb_indicator_background_color="@color/colorPrimary"
        app:rsb_indicator_height="30dp"
        app:rsb_indicator_width="50dp"
        app:rsb_mode="range"
        app:rsb_progress_color="@android:color/holo_green_light"
        app:rsb_step_auto_bonding="true"
        app:rsb_step_color="@color/colorPrimary"
        app:rsb_step_height="10dp"
        app:rsb_step_width="5dp"
        app:rsb_max="2022"
        app:rsb_min="1985"
        android:layout_marginTop="10dp"
        app:rsb_indicator_show_mode="alwaysShow"
        app:rsb_thumb_drawable="@drawable/rsb_default_thumb"
        app:rsb_tick_mark_layout_gravity="bottom"
        app:rsb_tick_mark_mode="number"
        app:rsb_tick_mark_text_margin="20dp"
        app:rsb_tick_mark_text_color="@color/black"
        app:rsb_tick_mark_text_array="@array/range_year"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitleYear" />
    <TextView
        android:id="@+id/txtTitlePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_year"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="@+id/rsYear"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.jaygoo.widget.RangeSeekBar
        android:id="@+id/rsPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rsb_indicator_background_color="@color/colorPrimary"
        app:rsb_indicator_height="30dp"
        app:rsb_indicator_width="50dp"
        app:rsb_mode="range"
        app:rsb_progress_color="@android:color/holo_green_light"
        app:rsb_step_auto_bonding="true"
        app:rsb_max="4000"
        app:rsb_min="1000"
        app:rsb_indicator_show_mode="alwaysShow"
        app:rsb_step_color="@color/colorPrimary"
        app:rsb_step_height="10dp"
        app:rsb_step_width="5dp"
        app:rsb_thumb_drawable="@drawable/rsb_default_thumb"
        android:layout_marginTop="10dp"
        app:rsb_tick_mark_mode="number"
        app:rsb_tick_mark_layout_gravity="bottom"
        app:rsb_tick_mark_text_color="@color/black"
        app:rsb_tick_mark_text_array="@array/range_price"
        app:rsb_tick_mark_text_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitlePrice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       />
    <TextView
        android:id="@+id/idShortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_by_id"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/rsPrice"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        app:layout_constraintTop_toBottomOf="@+id/idShortLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/btnOdd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/odd"/>
        <RadioButton
            android:id="@+id/btnEven"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/even"/>

    </RadioGroup>
<CheckBox
    android:id="@+id/shortAlphabetically"
    android:layout_marginTop="60dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Short alphabetically"
    android:textColor="@color/black"
    app:layout_constraintTop_toBottomOf="@+id/idShortLabel"
    app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/shortAlphabetically"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnApply"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="Cancel"/>
    <Button
        android:id="@+id/btnApply"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="Apply"/>



</androidx.constraintlayout.widget.ConstraintLayout>